# vm-composes

./: .env.exsample  .gitignore  README.md  app-service.yaml  auth-service.yaml  data-service.yaml  frontend-service.yaml  monitor-service.yaml
auth-service/: .gitignore  Cargo.toml  Dockerfile
auth-service/src/: db.rs  main.rs  utils.rs
auth-service/src/models/: user.rs
auth-service/src/monitoring/: metrics.rs  tracing.rs
auth-service/src/services/: auth.rs
auth-service/src/tobe_utils/: http_utils.rs  mod.rs
configs/: clickhouse-config.xml  clickhouse-users.xml  otel-collector-config.yaml  otel-collector-config1.yaml  prometheus.yml  vector.toml  vector1.toml  vector2.toml  vector3.toml  vector_backup.toml  vector_backup2.toml  vector_backup_otel_logs.toml
configs/clickhouse/: init.sql  init1.sql  init2.sql
configs/grafana/provisioning/datasources/: datasource.yaml
configs/init-mssql/init/: init.sql
configs/jmx/: kafka.yaml
script/healthcheck/: mssql.sh
script/mssql/: init.sql
tests/k6/: auth-service.js
