[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[env]
SQLX_OFFLINE = "true"

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rust-argon2 = "2.1"
# argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
dotenvy = "0.15"
env_logger = "0.10.0"
log = "0.4.17"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "uuid",
    "postgres",
    "chrono",
    "json",
] }
thiserror = "1.0.40"
derive_more = "0.99.17"
